# StirlingEngine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
StirlingEngine/: CMakeLists.txt
StirlingEngine/include/: Debug.h  ECS.h  EntryPoint.h  Events.h  Game.h  Input.h  SEDataHandler.h  StirlingEngine.h  Test.h  Utils.hpp  Vector2f.h  Vector2i.h  Window.h
StirlingEngine/include/ECS/: Entity.hpp  EntityManager.h
StirlingEngine/include/ECS/Components/: Transform.h  cTransform.h
StirlingEngine/include/Events/: Event.h  EventDispatcher.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
StirlingEngine/src/: Debug.cpp  EntityManager.cpp  EventDispatcher.cpp  Game.cpp  Input.cpp  SEDataHandler.cpp  Test.cpp
StirlingEngine/src/Graphics/: Window.cpp
docs/: COMPILING.md  GettingStarted.md  README.md
docs/API/: Debug.md  Events.md  Vector2f.md
docs/Manual/: Documentation.md
docs/Manual/API/: Vector2i.md
docs/Manual/Engine/: Event.md  Game.md  Vector2f.md  Vector2i.md  Window.md
res/: TestEntity.see
src/: main.cpp
